--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- 🔥 PAYPAL: Permissions Policy para permitir iframes -->
+  <meta http-equiv="Permissions-Policy" content="payment=*, geolocation=*, microphone=(), camera=(), unload=()">
+  
   <!-- 🔥 SDK DE MERCADO PAGO REMOVIDO - No se usa porque redirigimos a Checkout Hosteado -->
 </head>
 
