--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,16 @@
   <base href="/">
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+  <!-- 🔥 Favicon inicial transparente para evitar que salga el logo de Angular antes de cargar la configuración -->
+  <link id="appFavicon" rel="icon" type="image/x-icon" href="data:image/x-icon;base64,">
+
+  <!-- 🔥 FONT AWESOME -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- 🔥 PAYPAL: Permissions Policy para permitir iframes -->
   <meta http-equiv="Permissions-Policy" content="payment=*, geolocation=*, microphone=(), camera=(), unload=()">
-  
-  <!-- 🔥 SDK DE MERCADO PAGO REMOVIDO - No se usa porque redirigimos a Checkout Hosteado -->
 </head>
 
 <body>
