--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <meta name="description"
     content="Dev-Hub-Sharks: La mejor plataforma para adquirir proyectos prácticos. Únete a nuestra comunidad de desarrolladores.">
   <meta name="keywords"
-    content="cursos, desarrollo web, proyectos, programación, angular, nodejs, fullstack, react, vue, devhubsharks">
+    content="dev hub shark, cursos, desarrollo web, proyectos, programación, angular, nodejs, fullstack, react, vue, devhubsharks">
   <meta name="author" content="Dev-Hub-Sharks">
   <meta name="robots" content="index, follow">
 
